# croc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  main.py  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  publish.yml  style.yml  test.yml
croc/: __init__.py  attack.py  bask.py  check.py  config.py  crawl.py  gitutil.py  hunt.py  lurk.py  ops.py
docs/: ci.md  concepts.md  contributing.md  design.md  index.md  install.md
examples/thoughts-from-code/src/: app.py  config.py
examples/thoughts-from-code/src/util/: clock.py
examples/thoughts-from-code/thoughts/: .croc.toml  app.md  app_output.md  config.md  self.md
examples/thoughts-from-code/thoughts/util/: clock.md  self.md
examples/thoughts/design/: self.md
examples/thoughts/notes/: obsidian-comparison.md
examples/thoughts/patterns/: registry.md
tests/: conftest.py  test_attack.py  test_bask.py  test_check.py  test_cli.py  test_config.py  test_crawl.py  test_hunt.py  test_lurk.py  test_ops.py  test_readme.py
