[project]
# PyPI distribution name. `croc` is taken by an unrelated scientific
# package; the import name and CLI command are still `croc`.
name = "croc-cli"
version = "0.2.0"
description = "A Rust-inspired, Typer-powered CLI for reliably managing project documentation."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Jesse Hartman" }]
keywords = ["cli", "documentation", "markdown", "refactoring", "typer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/jesshart/croc"
Source = "https://github.com/jesshart/croc"
Issues = "https://github.com/jesshart/croc/issues"
Changelog = "https://github.com/jesshart/croc/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mktestdocs>=0.2",
    "pre-commit>=3.8",
    "ty>=0.0.9",
]

[project.scripts]
croc = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["croc"]
# main.py is the Typer entrypoint referenced by [project.scripts]; ship it too.
force-include = { "main.py" = "main.py" }

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer uses function-call defaults (`typer.Argument(...)`, `typer.Option(...)`)
# as its idiomatic parameter-declaration pattern. B008 flags those by design.
"main.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
